# ITWM_Bilinear_Interpolation

./: CMakeLists.txt  Image.cpp  Image.h  README.md  biLin.py  main.cpp
code/: CImage.h  CImageIO.h
